color plate update

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Canada has made it easier for international students to begin their Canadian immigration journey. Whether you wish to begin your program at a Canadian college or university, you will be able to study online in your home country and still access the same benefits of being in Canada."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
@@ -30,10 +30,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WESTFORD</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Canada has made it easier for international students to begin their Canadian immigration journey. Whether you wish to begin your program at a Canadian college or university, you will be able to study online in your home country and still access the same benefits of being in Canada.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
