--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <title>Westfordbd | Your Canada Immigration Solution</title>
+
     <meta
       name="description"
       content="Canada has made it easier for international students to begin their Canadian immigration journey. Whether you wish to begin your program at a Canadian college or university, you will be able to study online in your home country and still access the same benefits of being in Canada."
