commit before admin panel created

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Westfordbd | Your Canada Immigration Solution</title>
-
+    <meta name="description" content="Canada has made it easier for international students to begin their Canadian immigration journey. Whether you wish to begin your program at a Canadian college or university, you will be able to study online in your home country and still access the same benefits of being in Canada.">
+    <meta name="keywords" content="">
+    <meta property="og:site_name" content="Westfordbd">
+    <meta property="og:title" content="Westfordbd | Your Canada Immigration Solution">
+    <meta property="og:description" content="Know more about Westfordbd">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="https://Westfordbd/about">
+    <meta property="og:type" content="website">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta
       name="description"
       content="Canada has made it easier for international students to begin their Canadian immigration journey. Whether you wish to begin your program at a Canadian college or university, you will be able to study online in your home country and still access the same benefits of being in Canada."
@@ -33,9 +41,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>WESTFORD</title>
+  <title>Westfordbd | Your Canada Immigration Solution</title>
   </head>
   <body>
+  
     <noscript>Canada has made it easier for international students to begin their Canadian immigration journey. Whether you wish to begin your program at a Canadian college or university, you will be able to study online in your home country and still access the same benefits of being in Canada.</noscript>
     <div id="root"></div>
     <!--
